@@ -1,3 +1,9 @@
+2006-05-27  Joel Brobecker  <brobecker@adacore.com>
+
+	From Peter Schauer <peterschauer@gmx.net>
+	* m2-typeprint.c (m2_record_fields): Move variable declarations
+	to the begining of the block.
+        
 2006-05-23  Mark Mitchell  <mark@codesourcery.com>
 
 	* mt-tdep.c (mt_register_name): Correct out-of-range logic to
